tests/algorithms/x/Scala/dynamic_programming/edit_distance.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/dynamic_programming/edit_distance.scala:72: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
      row = row :+ 0 - 1
                ^
one error found
